added history section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </header>
   <main aria-label="main">
-    <section class="home" aria-label="home section">
+    <section class="home-section" aria-label="home section">
       <div class="container">
         <h1 class="home-title" aria-label="title">Ivan Constantinovich Aivazovski</h1>
         <p class="home-desc" aria-label="description">Russian marine painter of Armenian origin, collector, philanthropist</p>
@@ -40,7 +40,7 @@
       </div>
     </section>
 
-    <section class="about">
+    <section class="about-section" aria-label="about section">
       <div class="container">
         <h2 class="about-title" aria-label="about title">About</h2>
         <h3 class="about-subtitle-ru" aria-label="about title ru">Ива́н Константи́нович Айвазо́вский – русский живописец-маринист армянского происхождения, коллекционер, меценат.</h3>
@@ -57,6 +57,18 @@
           Being a world famous artist, Ivan Konstantinovich Aivazovsky preferred to live and work in his homeland - in the Crimea. Aivazovsky is best known for his seascapes, which make up more than half of his work. The artist is considered one of the greatest marine painters of all time.
         </p>
 
+      </div>
+    </section>
+
+    <section class="history-section" aria-label="history section">
+      <div class="container">
+        <h2 class="history-title">
+          History
+        </h2>
+        <img src="assets/webp/history.webp" alt="house of Aivazovski" class="history-photo">
+        <p class="history-desc" aria-label="history description">
+          Дом в котором родился Айвазовский | The house where Aivazovsky was born 
+        </p>
       </div>
     </section>
   </main>
