added portfolio section

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       <nav class="nav" aria-label="header navigation">
         <ul class="nav-list" aria-label="header navigation list">
           <li>
-            <a href="#" class="nav-link" aria-label="link to home">Home</a>
+            <a href="#home-id" class="nav-link" aria-label="link to home">Home</a>
           </li>
           <li>
-            <a href="#" class="nav-link" aria-label="link to about">About</a>
+            <a href="#about-id" class="nav-link" aria-label="link to about">About</a>
           </li>
           <li>
-            <a href="#" class="nav-link" aria-label="link to history">History</a>
+            <a href="#history-id" class="nav-link" aria-label="link to history">History</a>
           </li>
           <li>
-            <a href="#" class="nav-link" aria-label="link to portfolio">Portfolio</a>
+            <a href="#portfolio-id" class="nav-link" aria-label="link to portfolio">Portfolio</a>
           </li>
           <li>
             <a href="#" class="nav-link" aria-label="link to contacts">Contacts</a>
@@ -32,7 +32,7 @@
     </div>
   </header>
   <main aria-label="main">
-    <section class="home-section" aria-label="home section">
+    <section class="home-section" aria-label="home section" id="home-id">
       <div class="container">
         <h1 class="home-title" aria-label="title">Ivan Constantinovich Aivazovski</h1>
         <p class="home-desc" aria-label="description">Russian marine painter of Armenian origin, collector, philanthropist</p>
@@ -40,7 +40,7 @@
       </div>
     </section>
 
-    <section class="about-section" aria-label="about section">
+    <section class="about-section" aria-label="about section" id="about-id">
       <div class="container">
         <h2 class="about-title" aria-label="about title">About</h2>
         <h3 class="about-subtitle-ru" aria-label="about title ru">Ива́н Константи́нович Айвазо́вский – русский живописец-маринист армянского происхождения, коллекционер, меценат.</h3>
@@ -60,7 +60,7 @@
       </div>
     </section>
 
-    <section class="history-section" aria-label="history section">
+    <section class="history-section" aria-label="history section" id="history-id">
       <div class="container">
         <h2 class="history-title">
           History
@@ -69,6 +69,20 @@
         <p class="history-desc" aria-label="history description">
           Дом в котором родился Айвазовский | The house where Aivazovsky was born 
         </p>
+      </div>
+    </section>
+
+    <section class="portfolio-section" aria-label="portfolio section" id="portfolio-id">
+      <div class="container">
+        <h2 class="portfolio-title">
+          Portfolio
+        </h2>
+        <img src="assets/webp/portfolio_1.webp" alt="Winter wagon train on the way, 1857" class="portfolio-picture">
+        <p class="portfolio-desc" aria-label="picture one description">Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857</p>
+        <img src="assets/webp/portfolio_2.webp" alt="Rainbow, 1873" class="portfolio-picture">
+        <p class="portfolio-desc" aria-label="picture two description">Радуга, 1873 г. | Rainbow, 1873</p>
+        <img src="assets/webp/portfolio_3.webp" alt=" Gulf of Naples in the morning, 1893" class="portfolio-picture">
+        <p class="portfolio-desc" aria-label="picture three description">Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning, 1893</p>
       </div>
     </section>
   </main>
