--- a/index.html
+++ b/index.html
@@ -1,191 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="assets/favicon.png" type="image/png" />
-    <link rel="stylesheet" href="index.css" />
-    <title>Aivazovski</title>
-  </head>
-  <body>
-    <header class="header" aria-label="header">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="assets/favicon.png" type="image/png">
+  <link rel="stylesheet" href="index.css">
+  <title>Aivazovski</title>
+</head>
+
+<body>
+  <header class="header" aria-label="header">
+    <div class="container">
+      <nav class="nav" aria-label="header navigation">
+        <ul class="nav-list" aria-label="header navigation list">
+          <li>
+            <a href="#home-id" class="nav-link" aria-label="link to home">Home</a>
+          </li>
+          <li>
+            <a href="#about-id" class="nav-link" aria-label="link to about">About</a>
+          </li>
+          <li>
+            <a href="#history-id" class="nav-link" aria-label="link to history">History</a>
+          </li>
+          <li>
+            <a href="#portfolio-id" class="nav-link" aria-label="link to portfolio">Portfolio</a>
+          </li>
+          <li>
+            <a href="#contacts-id" class="nav-link" aria-label="link to contacts">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="mobile-nav" aria-label="mobile-navigation">
+    <label for="toggler-id" aria-label="open-close mobile-nav menu">
+      <svg class="mobile-nav-burger" aria-label="burger icon">
+        <use href="assets/sprites.svg#burger-icon"></use>
+      </svg>
+    </label>
+
+    <input type="checkbox" id="toggler-id" class="mobile-nav-toggler">
+
+    <nav class="mobile-nav-menu" aria-label="mobile header navigation">
+      <ul class="mobile-nav-list" aria-label="mobile header navigation list">
+        <li>
+          <a href="#home-id" class="mobile-nav-link" aria-label="link to home">Home</a>
+        </li>
+        <li>
+          <a href="#about-id" class="mobile-nav-link" aria-label="link to about">About</a>
+        </li>
+        <li>
+          <a href="#history-id" class="mobile-nav-link" aria-label="link to history">History</a>
+        </li>
+        <li>
+          <a href="#portfolio-id" class="mobile-nav-link" aria-label="link to portfolio">Portfolio</a>
+        </li>
+        <li>
+          <a href="#contacts-id" class="mobile-nav-link" aria-label="link to contacts">Contacts</a>
+        </li>
+      </ul>
+
+      <label class="mobile-nav-close" for="toggler-id" aria-label="open-close mobile-nav">
+      <svg class="mobile-nav-cross" aria-label="burger icon">
+        <use href="assets/sprites.svg#cross-icon"></use>
+      </svg>
+    </label>
+    </nav>
+  </div>
+
+  <main aria-label="main">
+    <section class="home-section" aria-label="home section" id="home-id">
       <div class="container">
-        <nav class="nav" aria-label="header navigation">
-          <ul class="nav-list" aria-label="header navigation list">
-            <li>
-              <a href="#home-id" class="nav-link" aria-label="link to home"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a href="#about-id" class="nav-link" aria-label="link to about"
-                >About</a
-              >
-            </li>
-            <li>
-              <a
-                href="#history-id"
-                class="nav-link"
-                aria-label="link to history"
-                >History</a
-              >
-            </li>
-            <li>
-              <a
-                href="#portfolio-id"
-                class="nav-link"
-                aria-label="link to portfolio"
-                >Portfolio</a
-              >
-            </li>
-            <li>
-              <a
-                href="#contacts-id"
-                class="nav-link"
-                aria-label="link to contacts"
-                >Contacts</a
-              >
-            </li>
-          </ul>
-        </nav>
+        <h1 class="home-title" aria-label="title">
+          Ivan Constantinovich Aivazovski
+        </h1>
+        <p class="home-desc" aria-label="description">
+          Russian marine painter of Armenian origin, collector, philanthropist
+        </p>
+        <img src="assets/webp/home.webp" alt="photo of Aivazovski" class="home-img">
       </div>
-    </header>
-    <main aria-label="main">
-      <section class="home-section" aria-label="home section" id="home-id">
-        <div class="container">
-          <h1 class="home-title" aria-label="title">
-            Ivan Constantinovich Aivazovski
-          </h1>
-          <p class="home-desc" aria-label="description">
-            Russian marine painter of Armenian origin, collector, philanthropist
-          </p>
-          <img
-            src="assets/webp/home.webp"
-            alt="photo of Aivazovski"
-            class="home-img"
-          />
-        </div>
-      </section>
+    </section>
 
-      <section class="about-section" aria-label="about section" id="about-id">
-        <div class="container">
-          <h2 class="about-title" aria-label="about title">About</h2>
-          <h3 class="about-subtitle-ru" aria-label="about title ru">
-            Ива́н Константи́нович Айвазо́вский – русский живописец-маринист
-            армянского происхождения, коллекционер, меценат.
-          </h3>
-          <p class="about-description-ru" aria-label="description ru">
-            Будучи художником с мировой известностью, Иван Константинович
-            Айвазовский предпочитал жить и работать на своей родине — в Крыму.
-            Айвазовский наиболее известен своими морскими пейзажами, которые
-            составляют больше половины его работ. Художник считается одним из
-            величайших маринистов всех времён.
-          </p>
+    <section class="about-section" aria-label="about section" id="about-id">
+      <div class="container">
+        <h2 class="about-title" aria-label="about title">About</h2>
+        <h3 class="about-subtitle-ru" aria-label="about title ru">
+          Ива́н Константи́нович Айвазо́вский – русский живописец-маринист
+          армянского происхождения, коллекционер, меценат.
+        </h3>
+        <p class="about-description-ru" aria-label="description ru">
+          Будучи художником с мировой известностью, Иван Константинович
+          Айвазовский предпочитал жить и работать на своей родине — в Крыму.
+          Айвазовский наиболее известен своими морскими пейзажами, которые
+          составляют больше половины его работ. Художник считается одним из
+          величайших маринистов всех времён.
+        </p>
 
-          <hr class="divider" aria-label="divider" />
+        <hr class="divider" aria-label="divider">
 
-          <h3 class="about-subtitle-en" aria-label="about title ru">
-            Ivan Konstantinovich Aivazovsky - Russian marine painter of Armenian
-            origin, collector, philanthropist.
-          </h3>
-          <p class="about-description-en" aria-label="description en">
-            Being a world famous artist, Ivan Konstantinovich Aivazovsky
-            preferred to live and work in his homeland - in the Crimea.
-            Aivazovsky is best known for his seascapes, which make up more than
-            half of his work. The artist is considered one of the greatest
-            marine painters of all time.
-          </p>
-        </div>
-      </section>
+        <h3 class="about-subtitle-en" aria-label="about title ru">
+          Ivan Konstantinovich Aivazovsky - Russian marine painter of Armenian
+          origin, collector, philanthropist.
+        </h3>
+        <p class="about-description-en" aria-label="description en">
+          Being a world famous artist, Ivan Konstantinovich Aivazovsky
+          preferred to live and work in his homeland - in the Crimea.
+          Aivazovsky is best known for his seascapes, which make up more than
+          half of his work. The artist is considered one of the greatest
+          marine painters of all time.
+        </p>
+      </div>
+    </section>
 
-      <section
-        class="history-section"
-        aria-label="history section"
-        id="history-id"
-      >
-        <div class="container">
-          <h2 class="history-title">History</h2>
-          <img
-            src="assets/webp/history.webp"
-            alt="house of Aivazovski"
-            class="history-photo"
-          />
-          <p class="history-desc" aria-label="history description">
-            Дом в котором родился Айвазовский | The house where Aivazovsky was
-            born
-          </p>
-        </div>
-      </section>
+    <section class="history-section" aria-label="history section" id="history-id">
+      <div class="container">
+        <h2 class="history-title">History</h2>
+        <img src="assets/webp/history.webp" alt="house of Aivazovski" class="history-photo">
+        <p class="history-desc" aria-label="history description">
+          Дом в котором родился Айвазовский | The house where Aivazovsky was
+          born
+        </p>
+      </div>
+    </section>
 
-      <section
-        class="portfolio-section"
-        aria-label="portfolio section"
-        id="portfolio-id"
-      >
-        <div class="container">
-          <h2 class="portfolio-title">Portfolio</h2>
-          <img
-            src="assets/webp/portfolio_1.webp"
-            alt="Winter wagon train on the way, 1857"
-            class="portfolio-picture"
-          />
-          <p class="portfolio-desc" aria-label="picture one description">
-            Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857
-          </p>
-          <img
-            src="assets/webp/portfolio_2.webp"
-            alt="Rainbow, 1873"
-            class="portfolio-picture"
-          />
-          <p class="portfolio-desc" aria-label="picture two description">
-            Радуга, 1873 г. | Rainbow, 1873
-          </p>
-          <img
-            src="assets/webp/portfolio_3.webp"
-            alt=" Gulf of Naples in the morning, 1893"
-            class="portfolio-picture"
-          />
-          <p class="portfolio-desc" aria-label="picture three description">
-            Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning,
-            1893
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer class="contacts" aria-label="contacts section" id="contacts-id">
-        <div class="container">
-            <h2 class="contacts-title">Contacts</h2>
-            <button class="contacts-button">
-                <a href="https://ayvazovskiy.su" class="button-link" target="_blank">ayvazovskiy.su</a>
-            </button>
+    <section class="portfolio-section" aria-label="portfolio section" id="portfolio-id">
+      <div class="container">
+        <h2 class="portfolio-title">Portfolio</h2>
+        <img src="assets/webp/portfolio_1.webp" alt="Winter wagon train on the way, 1857" class="portfolio-picture">
+        <p class="portfolio-desc" aria-label="picture one description">
+          Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857
+        </p>
+        <img src="assets/webp/portfolio_2.webp" alt="Rainbow, 1873" class="portfolio-picture">
+        <p class="portfolio-desc" aria-label="picture two description">
+          Радуга, 1873 г. | Rainbow, 1873
+        </p>
+        <img src="assets/webp/portfolio_3.webp" alt=" Gulf of Naples in the morning, 1893" class="portfolio-picture">
+        <p class="portfolio-desc" aria-label="picture three description">
+          Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning,
+          1893
+        </p>
+      </div>
+    </section>
+  </main>
+  <footer class="contacts" aria-label="contacts section" id="contacts-id">
+    <div class="container">
+      <h2 class="contacts-title">Contacts</h2>
+      <button class="contacts-button">
+        <a href="https://ayvazovskiy.su" class="button-link" target="_blank">ayvazovskiy.su</a>
+      </button>
 
-            <address class="socials" aria-label="social icons">
-                <a href="https://youtube.com" target="_blank" aria-label="link to youtube">
-                    <svg class="social-icon" aria-label="youtube icon">
-                        <use href="assets/sprites.svg#youtube-icon"></use>
-                    </svg>
-                </a>
-                <a href="https://linkedin.com" target="_blank" aria-label="link to linkedin">
-                    <svg class="social-icon" aria-label="linkedin icon">
-                        <use href="assets/sprites.svg#linkedin-icon"></use>
-                    </svg>
-                </a>
-                <a href="https://instagram.com" target="_blank" aria-label="link to instagram">
-                    <svg class="social-icon" aria-label="instagram icon">
-                        <use href="assets/sprites.svg#instagram-icon"></use>
-                    </svg>
-                </a>
-                <a href="https://facebook.com" target="_blank" aria-label="link to facebook">
-                    <svg class="social-icon" aria-label="facebook icon">
-                        <use href="assets/sprites.svg#facebook-icon"></use>
-                    </svg>
-                </a>
-            </address>
+      <address class="socials" aria-label="social icons">
+        <a href="https://youtube.com" target="_blank" aria-label="link to youtube">
+          <svg class="social-icon" aria-label="youtube icon">
+            <use href="assets/sprites.svg#youtube-icon"></use>
+          </svg>
+        </a>
+        <a href="https://linkedin.com" target="_blank" aria-label="link to linkedin">
+          <svg class="social-icon" aria-label="linkedin icon">
+            <use href="assets/sprites.svg#linkedin-icon"></use>
+          </svg>
+        </a>
+        <a href="https://instagram.com" target="_blank" aria-label="link to instagram">
+          <svg class="social-icon" aria-label="instagram icon">
+            <use href="assets/sprites.svg#instagram-icon"></use>
+          </svg>
+        </a>
+        <a href="https://facebook.com" target="_blank" aria-label="link to facebook">
+          <svg class="social-icon" aria-label="facebook icon">
+            <use href="assets/sprites.svg#facebook-icon"></use>
+          </svg>
+        </a>
+      </address>
 
-            <p class="contacts-info" aria-label="just for notice">
-                More works you can see in these social networks
-            </p>
-        </div>
-    </footer>
-  </body>
+      <p class="contacts-info" aria-label="just for notice">
+        More works you can see in these social networks
+      </p>
+    </div>
+  </footer>
+</body>
+
 </html>
